syntax = "proto3";
package other_package;

option java_package = "my_package";

service MyService {
  rpc Check(MyRequest) returns (MyResponse);
}

message MyRequest {
  string value = 1;
}

message MyResponse {
  string value = 1;
}